--- a/app/templates/PigPrice.html
+++ b/app/templates/PigPrice.html
@@ -90,6 +90,7 @@
                 name: '仔猪价格',
                 yAxisIndex:0,
                 type: 'line',
+                connectNulls:true,
                 color: 'Gold',
                 itemStyle: {normal: {lineStyle: {width: 4}}},
                 // data: {{l4s}}
@@ -98,6 +99,7 @@
                 name: '白条猪出场价格',
                 yAxisIndex:0,
                 type: 'line',
+                connectNulls:true,
                 color: 'GoldEnrod',
                 lineStyle:{
                     width:4,
@@ -109,6 +111,7 @@
                 name: '宰后均重-右1轴',
                 yAxisIndex:1,
                 type: 'line',
+                connectNulls:true,
                 symbol:'none',
                 color: 'Olive',
                 lineStyle:{
@@ -120,6 +123,7 @@
                 name: '广东玉米价格-右2轴',
                 yAxisIndex:2,
                 type: 'line',
+                connectNulls:true,
                 symbol:'none',
                 itemStyle: {normal: {areaStyle: {type: 'default'}}},
                 // data: {{l4}}
