--- a/app/templates/cornbasischart.html
+++ b/app/templates/cornbasischart.html
@@ -469,16 +469,19 @@
                 {
                     name: '基差1月',
                     type: 'line',
+                    // connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: '基差5月',
-                    type: 'line'
+                    type: 'line',
+                    // connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: '基差9月',
-                    type: 'line'
+                    type: 'line',
+                    // connectNulls:true,
                     // data: {{l4}}
                 }
             ]
