--- a/app/templates/deepprocessing.html
+++ b/app/templates/deepprocessing.html
@@ -95,7 +95,7 @@
                             // console.log(params)
                             var date = new Date(params.value);
                             var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
-                            return texts.join('');
+                            return texts.join('/');
                         },
                     }
                 },
