--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,8 +3,8 @@
     <!-- <div align="right"><p><b>每天早晨叫醒你的不应该是闹钟，而应该是梦想！！！</b></p></div> -->
 
     <div class="container">
-        <div class="row">
-            <div class="col-sm-6 col-md-8">
+<!--         <div class="row">
+            <div class="col-sm-6 col-md-8"> -->
                 <div class="row">
                     <h3 class="h_style">玉米市场资讯</h3>
                 </div>
@@ -92,7 +92,7 @@
                         <li><a href="/aboutus" target="_blank">项目捐赠</a></li>
                     </ul>
                 </div>
-            </div>
+<!--             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="row">
                     <div id="basis9" class="chart_home"></div>
@@ -104,7 +104,7 @@
                     <img id="nongyeganhan" class="img-responsive">
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
 
@@ -115,146 +115,6 @@
         <p class="p_test"><a href="/temptest" target="_blank">临时测试1</a></p>
         <p class="p_test"><a href="/temptest2" target="_blank">临时测试2</a></p>
     </div>
-    <script type="text/javascript">
-        var droughturl = {{droughturl|tojson}};
-        var nongyeDroughturl = {{nongyeDroughturl|tojson}};
-        // console.log(url);
-        document.getElementById('qixiangganhan').setAttribute("src", droughturl);
-        document.getElementById('nongyeganhan').setAttribute("src", nongyeDroughturl);
-    </script>
 
-    <script type="text/javascript">
-        // 基于准备好的dom，初始化echarts实例
-        var myChart3 = echarts.init(document.getElementById('basis9'), 'vintage');
-        var my_corn_year_basis9_l = {{corn_year_basis9_l|tojson}};
-        // myChart.showLoading();
-
-        // 指定图表的配置项和数据
-        var option = {
-            title: {
-                text: '现货-期货9月基差',
-                left:'center'
-            },
-            tooltip: {
-                trigger: 'axis',
-                axisPointer:{
-                    type:'cross'
-                }
-            },
-            // emphasis: {
-            //     itemStyle: {
-            //         color: 'blue'
-            //     },
-            //     label: {
-            //         show: true,
-            //         formatter: 'This is a emphasis label.'
-            //     
-            // },
-            legend: {
-                data:['2019', '2018', '2017', '2016', '2015'],
-                y:30
-            },
-            grid:{
-                // show:'true',
-                // borderColor:"red",
-                // borderWidth:'1',
-                width:"85%",
-                height:"60%",
-                // y:"-20%",
-                // backgroundColor:"blue",
-
-            },
-
-            xAxis: {
-                type:'category',
-                axisLabel:{
-                    // formatter:'{{value}}kg'
-                    formatter: function (value, index) {
-                        // 格式化成月/日，只在第一个刻度显示年份
-                        var date = new Date(value);
-                        // var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
-                        var texts = [date.getMonth()+1, date.getDate()];
-                        // if (index === 0) {
-                        //     texts.unshift(date.getFullYear());
-                        // }
-                        return texts.join('/');
-                    }
-                },
-                axisPointer: {
-                    label: {
-                        formatter: function (params) {
-                            var date = new Date(params.value);
-                            var texts = [date.getMonth()+1, date.getDate()];
-                            return texts.join('/');
-                        },
-                    }
-                },
-                // data: []
-            },
-            yAxis: {},
-            // dataZoom: [
-            //     {
-            //         type: 'slider',
-            //         start:0,
-            //         end:100
-            //     }
-            // ],
-            dataset:{
-                dimensions: ['date', '2019basis9', '2018basis9', '2017basis9', '2016basis9', '2015basis9'],
-                source: my_corn_year_basis9_l
-            },
-            series: [
-                {
-                    name: '2019',
-                    type: 'line',
-                    // color:'black',
-                    // symbol:'none',
-                    // symbolSize:8,
-                    lineStyle:{
-                        width:4,
-                        type:"solid",
-                    },
-                    connectNulls:true,
-                    // data: {{l4}}
-                },
-                {
-                    name: '2018',
-                    type: 'line',
-                    connectNulls:true,
-                    // data: {{l4}}
-                },
-                {
-                    name: '2017',
-                    type: 'line',
-                    connectNulls:true,
-                    // data: {{l4s}}
-                },
-                {
-                    name: '2016',
-                    type: 'line',
-                    connectNulls:true,
-                    // data: {{l4s}}
-                },
-                {
-                    name: '2015',
-                    type: 'line',
-                    connectNulls:true,
-                    // data: {{l4s}}
-                }
-            ]
-        };
-
-
-        // 使用刚指定的配置项和数据显示图表。
-        myChart3.setOption(option);
-    </script>
-    <script type="text/javascript">
-        window.onresize = function(){
-            // myChart1.resize()
-            // myChart2.resize()
-            myChart3.resize()
-            // myChart4.resize()
-        }
-    </script>
 {% endblock %}
 
