--- a/app/templates/portcarryout.html
+++ b/app/templates/portcarryout.html
@@ -146,6 +146,7 @@
                     name: '锦州港价格',
                     yAxisIndex:2,
                     type: 'line',
+                    connectNulls:true,
                     itemStyle: {normal: {lineStyle: {width: 3}}},
                     // data: {{l4s}}
                 }
@@ -292,6 +293,7 @@
                     name: '广东港口价格',
                     yAxisIndex:2,
                     type: 'line',
+                    connectNulls:true,
                     itemStyle: {normal: {lineStyle: {width: 3}}},
                     // data: {{l4s}}
                 }
@@ -535,6 +537,7 @@
                     name: '内贸价格',
                     yAxisIndex:0,
                     type: 'line',
+                    connectNulls:true,
                     color: 'black',
                     symbol:'triangle',
                     symbolSize:8,
@@ -545,6 +548,7 @@
                     name: '进口玉米成本',
                     yAxisIndex:0,
                     type: 'line',
+                    connectNulls:true,
                     // symbol:'none',
                     // symbolSize:0,
                     // itemStyle: {normal: {areaStyle: {type: 'default'}}},
@@ -554,6 +558,7 @@
                     name: '高粱',
                     yAxisIndex:0,
                     type: 'line',
+                    connectNulls:true,
                     color:'purple',
                     // symbol:'none',
                     // symbolSize:0,
@@ -564,6 +569,7 @@
                     name: '大麦',
                     yAxisIndex:0,
                     type: 'line',
+                    connectNulls:true,
                     color:'yellow'
                     // symbol:'none',
                     // symbolSize:0,
