add gather out cumsum

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -13,6 +13,7 @@
                         <li><a href="/priceSummarize" target="_blank">产区价格与工厂库存</a></li>
                         <li><a href="/shouliangjindu" target="_blank">售粮进度</a></li>
                         <li><a href="/portcarryout" target="_blank">南北港库存与价格</a></li>
+                        <li><a href="/gatherandout" target="_blank">集疏港量</a></li>
                         <li><a href="/deepprocessing" target="_blank">深加工开工率与利润</a></li>
                         <li><a href="/corntempres" target="_blank">临储拍卖</a></li>
                         <li><a href="/pigprice" target="_blank">生猪价格</a></li>
