--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,8 +3,8 @@
     <!-- <div align="right"><p><b>每天早晨叫醒你的不应该是闹钟，而应该是梦想！！！</b></p></div> -->
 
     <div class="container">
-<!--         <div class="row">
-            <div class="col-sm-6 col-md-8"> -->
+        <!-- <div class="row"> -->
+            <div class="col-sm-6 col-md-8">
                 <div class="row">
                     <h3 class="h_style">玉米市场资讯</h3>
                 </div>
@@ -16,6 +16,7 @@
                         <li><a href="/gatherandout" target="_blank">集疏港量</a></li>
                         <li><a href="/deepprocessing" target="_blank">深加工开工率与利润</a></li>
                         <li><a href="/corntempres" target="_blank">临储拍卖</a></li>
+                        <li><a href="/importandexport" target="_blank">玉米及替代品进口</a></li>
                         <li><a href="/pigprice" target="_blank">生猪价格</a></li>
                         <li><a href="/cornbasischart" target="_blank">玉米基差走势图</a></li>
                         <li><a href="/cornspreadchart" target="_blank">玉米期货价差走势图</a></li>
@@ -93,21 +94,146 @@
                         <li><a href="/aboutus" target="_blank">项目捐赠</a></li>
                     </ul>
                 </div>
-<!--             </div>
+            </div>
             <div class="col-sm-6 col-md-4">
                 <div class="row">
                     <div id="basis9" class="chart_home"></div>
                 </div>
                 <div class="row">
-                    <img id="qixiangganhan" class="img-responsive">
+                    <img id="nongyeganhan" class="img-responsive img_home">
                 </div>
                 <div class="row">
-                    <img id="nongyeganhan" class="img-responsive">
+                    <img id="qixiangganhan" class="img-responsive img_home">
                 </div>
             </div>
-        </div> -->
+        <!-- </div> -->
+
+    <script type="text/javascript">
+        // 基于准备好的dom，初始化echarts实例
+        var myChart3 = echarts.init(document.getElementById('basis9'), 'vintage');
+        var my_corn_year_basis9_l = {{corn_year_basis9_l|tojson}};
+        // myChart.showLoading();
+
+        // 指定图表的配置项和数据
+        var option = {
+            title: {
+                text: '现货-期货9月基差',
+                left:'center'
+            },
+            tooltip: {
+                trigger: 'axis',
+                axisPointer:{
+                    type:'cross'
+                }
+            },
+            // emphasis: {
+            //     itemStyle: {
+            //         color: 'blue'
+            //     },
+            //     label: {
+            //         show: true,
+            //         formatter: 'This is a emphasis label.'
+            //     
+            // },
+            legend: {
+                data:['2019', '2018', '2017', '2016', '2015'],
+                y:30
+            },
+            xAxis: {
+                type:'category',
+                axisLabel:{
+                    // formatter:'{{value}}kg'
+                    formatter: function (value, index) {
+                        // 格式化成月/日，只在第一个刻度显示年份
+                        var date = new Date(value);
+                        // var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
+                        var texts = [date.getMonth()+1, date.getDate()];
+                        // if (index === 0) {
+                        //     texts.unshift(date.getFullYear());
+                        // }
+                        return texts.join('/');
+                    }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
+                // data: []
+            },
+            yAxis: {},
+            // dataZoom: [
+            //     {
+            //         type: 'slider',
+            //         start:0,
+            //         end:100
+            //     }
+            // ],
+            dataset:{
+                dimensions: ['date', '2019basis9', '2018basis9', '2017basis9', '2016basis9', '2015basis9'],
+                source: my_corn_year_basis9_l
+            },
+            series: [
+                {
+                    name: '2019',
+                    type: 'line',
+                    // color:'black',
+                    // symbol:'none',
+                    // symbolSize:8,
+                    lineStyle:{
+                        width:4,
+                        type:"solid",
+                    },
+                    connectNulls:true,
+                    // data: {{l4}}
+                },
+                {
+                    name: '2018',
+                    type: 'line',
+                    connectNulls:true,
+                    // data: {{l4}}
+                },
+                {
+                    name: '2017',
+                    type: 'line',
+                    connectNulls:true,
+                    // data: {{l4s}}
+                },
+                {
+                    name: '2016',
+                    type: 'line',
+                    connectNulls:true,
+                    // data: {{l4s}}
+                },
+                {
+                    name: '2015',
+                    type: 'line',
+                    connectNulls:true,
+                    // data: {{l4s}}
+                }
+            ]
+        };
 
 
+        // 使用刚指定的配置项和数据显示图表。
+        myChart3.setOption(option);
+    </script>
+
+    <script type="text/javascript">
+        window.onresize = function(){
+            myChart3.resize()
+        }
+    </script>
+    <script type="text/javascript">
+        var droughturl = {{droughturl|tojson}}
+        var nongyeDroughturl = {{nongyeDroughturl|tojson}}
+        document.getElementById('qixiangganhan').setAttribute("src", droughturl);
+        document.getElementById('nongyeganhan').setAttribute("src", nongyeDroughturl);
+    </script>
 
         <br>
         <!-- ###################################################################################### -->
