add cftc jinzhou seasonal html

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,6 +11,7 @@
                 <div class="row">
                     <ul class="list-inline content_fontsize">
                         <li><a href="/priceSummarize" target="_blank">产区价格与工厂库存</a></li>
+                        <li><a href="/priceseasonal" target="_blank">錦州港新粮价格季节性</a></li>
                         <li><a href="/shouliangjindu" target="_blank">售粮进度</a></li>
                         <li><a href="/portcarryout" target="_blank">南北港库存与价格</a></li>
                         <li><a href="/gatherandout" target="_blank">集疏港量</a></li>
@@ -20,6 +21,7 @@
                         <li><a href="/pigprice" target="_blank">生猪价格</a></li>
                         <li><a href="/cornbasischart" target="_blank">玉米基差走势图</a></li>
                         <li><a href="/cornspreadchart" target="_blank">玉米期货价差走势图</a></li>
+                        <li><a href="/cftcopi" target="_blank">CFTC持仓</a></li>
                         <li><a href="http://www.dce.com.cn/qiquanwang/pxjy/qqgj74/index.html" target="_blank">期权价格计算器</a></li>
                         <li><a href="/cornPrice" target="_blank">玉米潮干粮价格计算</a></li>
                     </ul>
