--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     {% if title %}
     <title>{{title}}</title>
     {% else %}
-    <title>Welcome To The LGT-INVESTMENT's World</title>
+    <title>Welcome To The UADS-INVESTMENT's World</title>
     {% endif%}
     
     <link rel="stylesheet" type="text/css" href="../static/css/mystyle.css">
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<div class="container text-center">
-	    <h2 class="h_style">Welcome To The LGT-INVESTMENT's World !</h2>
+	    <h2 class="h_style">Welcome To The UADS-INVESTMENT's World !</h2>
 	    <p class="content_fontsize">真 诚 地 提 示 您 ： 交 易 有 风 险 ， 投 资 需 谨 慎 ！</p>
     </div>   
     {% block content %}
